# sojourn

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  Makefile  README.md  config.example.toml  install.sh
.github/workflows/: release.yml
src/: app.rs  config.rs  discovery.rs  main.rs  search.rs  theme.rs  ui.rs  wizard.rs
src/inventory/: ansible.rs  mod.rs  shell_alias.rs  ssh_config.rs  yaml_config.rs
