[package]
name = "sojourn"
version = "0.2.4"
edition = "2021"
description = "A beautiful TUI SSH host manager with fuzzy search"

[[bin]]
name = "sojourn"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
fuzzy-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
glob = "0.3"
regex = "1"
dirs = "5"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
shellexpand = "3"
ipnet = "2"
walkdir = "2"
rayon = "1"
